[package]
name = "child_deamon2"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["tokio", "server", "http1"] }
tower = { version = "0.4", features = ["full"] }
tower-service = "0.3"
futures = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio-stream = { version = "0.1", features = ["io-util"] }
bytes = "1"
async-stream = "0.3"
chrono = { version = "0.4.43", features = ["serde"] }
dashmap = { version = "6.1.0", features = ["serde"] }
dotenv = "0.15.0"
parking_lot = { version = "0.12.5", features = ["serde"] }
rs-snowflake = "0.6.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.149", features = ["raw_value"] }
serde_with = "3.16.1"
fs = "0.0.5"
eui48 = { version = "1.1", features = ["serde"] }
sqlsrv = "0.13"
thiserror = "2.0.18"
once_cell = "1.21.4"
